--- a/contrib/lib/Cargo.toml
+++ b/contrib/lib/Cargo.toml
@@ -70,10 +70,10 @@ r2d2_redis = { version = "0.8", optional = true }
 memcache = { version = "0.11", optional = true }
 r2d2-memcache = { version = "0.3", optional = true }
 
-# postgres = { version = "0.15", optional = true }
-# r2d2_postgres = { version = "0.14", optional = true }
-# mongodb = { version = "0.3.12", optional = true }
-# r2d2-mongodb = { version = "0.2.0", optional = true }
+postgres = { version = "0.15", optional = true }
+r2d2_postgres = { version = "0.14", optional = true }
+mongodb = { version = "0.3.12", optional = true }
+r2d2-mongodb = { version = "0.2.0", optional = true }
 
 # SpaceHelmet dependencies
 time = { version = "0.1.40", optional = true }
