--- a/examples/databases/Cargo.toml
+++ b/examples/databases/Cargo.toml
@@ -7,11 +7,9 @@ publish = false
 
 [dependencies]
 rocket = { path = "../../core/lib", features = ["json"] }
-diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
-diesel_migrations = "1.3"
 
 [dependencies.sqlx]
-version = "0.5.1"
+version = "0.6.0"
 default-features = false
 features = ["macros", "offline", "migrate"]
 
@@ -21,4 +19,4 @@ features = ["sqlx_sqlite"]
 
 [dependencies.rocket_sync_db_pools]
 path = "../../contrib/sync_db_pools/lib/"
-features = ["diesel_sqlite_pool", "sqlite_pool"]
+features = ["sqlite_pool"]
